crates/vize_atelier_vapor/tests/snapshots/vapor_custom_directive_parity__directive_dynamic.snap
---
source: crates/vize_atelier_vapor/tests/vapor_custom_directive_parity.rs
expression: actual
---
[
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("A"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("A"),
                ],
                "tag": String("p"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("B"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("B"),
                ],
                "tag": String("p"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("B"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("C"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("C"),
                ],
                "tag": String("p"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("B"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("C"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("p"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("section"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("section"),
                "value": String("D"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("D"),
                ],
                "tag": String("section"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("B"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("C"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("p"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("section"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("section"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("section"),
                "value": String("E"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("E"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("E"),
            },
        ],
        "tree": Array [
            Object {
                "attributes": Object {},
                "children": Array [
                    String("E"),
                ],
                "tag": String("p"),
            },
        ],
    },
    Object {
        "hooks": Array [
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("top"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("A"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("B"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("C"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("p"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("section"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("section"),
                "value": String("D"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("section"),
                "value": String("E"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("setup"),
                "tag": String("p"),
                "value": String("E"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("effect"),
                "tag": String("p"),
                "value": String("E"),
            },
            Object {
                "arg": String("bottom"),
                "modifiers": Object {
                    "lazy": Bool(true),
                },
                "name": String("focus"),
                "phase": String("cleanup"),
                "tag": String("p"),
                "value": String("E"),
            },
        ],
        "tree": Array [],
    },
]
