crates/vize_atelier_vapor/tests/snapshots/vapor_custom_directive_parity__directive_dynamic_code.snap
---
source: crates/vize_atelier_vapor/tests/vapor_custom_directive_parity.rs
expression: parent.code
---
import { createDynamicComponent as _createDynamicComponent, resolveDirective as _resolveDirective, withVaporDirectives as _withVaporDirectives } from 'vue';

export function render(_ctx) {
  const _directive_focus = _resolveDirective("focus")
  const n0 = _createDynamicComponent(() => (_ctx.view), { label: () => (_ctx.value) }, null, true)
  _withVaporDirectives(n0, [[_directive_focus, () => (_ctx.value), () => (_ctx.placement), { "lazy": true }]])
  return n0
}
